08-Jul-2015 Laurent Duflot
	* README: fix typo in 'cleaning' bits for SR and add first
	recommandations for cleaning cuts


08-Jul-2015 Geraldine Conti
	* FilterUpdateMerge.py : add option for LO Z+Jets
	* makeDatasetList.py   : fixed filter efficiencies to 1 for these samples
	* makeDatasetList.py   : added suffix in .txt file name
	* mc15_13TeV_MCSampleList.py : added LO Z+jets samples as alternate samples
	* Cleaning of some photon isolation variables

07-Jul-2015 Laurent Duflot
	* makeDatasetList.py: when approx_GenFiltEff is not found for a dataset
	look in its parents. Same for the cross-section.
	* makeDatasetList.py: add --onlyComplete to keep only complete datasets
	* mc15_13TeV_MCSampleList.py: correct typo, sample 361082 was missing

06-Jul-2015 Laurent Duflot
	* makeDatasetList.py: list mc_channel_nb with no dataset found

06-Jul-2015 Geraldine Conti
	*add variables for photon isolation and quality

03-Jul-2015 Laurent Duflot
	* add baseline mc15 xAOD sample lists
	* makeDatasetList.py: add option --whichMC15 to automatically loop over the various
	r-tags for each mc15 week1/50ns/25ns production.
	* BuildSUSYObjects: have different tool names for CRY and others, move IsSignalJet and isBJet
	tests after overlap removal

01-Jul-2015 Laurent Duflot
	* ZeroLeptonRunPeriod.h, JobBookeeping.cxx: add derivation tags p2372, p2375 and p2377

30-Jun-2015 Laurent Duflot
	* mc15_13TeV_MCSampleList.py, mc15_13TeV_week1_MCSampleList.py: update list of baseline samples
	* ZeroLeptonCRxx: fill tau variables

29-Jun-2015 Laurent Duflot
	* mc15_13TeV_MCSampleList.py: update list of baseline samples, still a few missing "core" samples

28-Jun-2015 Laurent Duflot
	* BuildSUSYObjects: comment destructor due to crash in SUSYObjDef_xAOD
	destructor
	* update to SUSYTools-00-06-13: no change in ttbar cutflow
	* tagged as ZeroLeptonRun2-00-00-41

26-Jun-2015 Laurent Duflot
	* update to SUSYTools-00-06-12: ~10% more signal leptons in CRWT