@@ -222,8 +222,15 @@ bool ZeroLeptonCRZ::processEvent(xAOD::TEvent& event)
   // FIXME : to be implemented ... not in xAOD yet
   m_counter->increment(weight,incr++,"hfor veto",trueTopo);
 
-  // Trigger selection
-  // FIXME : no trigger information in xAOD yet 
+  // Trigger selection 
+  
+  bool passEltrigger=false;
+  bool passMutrigger=false;
+  if((int)eventInfo->auxdata<char>("HLT_e17_lhloose_L1EM15")==1 || (int)eventInfo->auxdata<char>("HLT_e17_loose_L1EM15")==1) passEltrigger = true;
+  if((int)eventInfo->auxdata<char>("HLT_mu14_iloose")==1 || (int)eventInfo->auxdata<char>("HLT_mu18")==1) passMutrigger = true; 
+  if( !(passEltrigger || passMutrigger) ) return true; 
+
+
   m_counter->increment(weight,incr++,"Trigger",trueTopo);
 
   // These jets have overlap removed
@@ -458,7 +465,7 @@ bool ZeroLeptonCRZ::processEvent(xAOD::TEvent& event)
       (good_jets[4].Pt() > m_cutVal.m_cutJetPt4)) inSR5 = true;
   if (inSR5 && (good_jets.size() > 5) &&
       (good_jets[5].Pt() > m_cutVal.m_cutJetPt5)) inSR6 = true;
-  if (!(inSRmono||inSR1||inSR2||inSR3||inSR4||inSR5||inSR6)) return true;
+  //if (!(inSRmono||inSR1||inSR2||inSR3||inSR4||inSR5||inSR6)) return true;
   m_counter->increment(weight,incr++,"jet Pt Selection",trueTopo);
 
 
