@@ -1,3 +1,8 @@
+09-Jul-2015 Marija Vranjes Milosavljevic
+	* ZeroLeptonSR.cxx, ZeroLeptonCRWT.cxx, ZeroLeptonCRY.cxx, ZeroLeptonCRZ.cxx, BuildSUSYObjects.cxx: adding trigger
+	selections for EPS note
+
+
 08-Jul-2015 Laurent Duflot
 	* README: fix typo in 'cleaning' bits for SR and add first
 	recommandations for cleaning cuts
